:bug: Fixed bugs with nuxt-content and dark mode and BottomNavBar style

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,5 +1,5 @@
 :root {
   --header-mobile: 56px;
   --header: 64px;
-  --navbar: 83px;
+  --navbar: 56px;
 }
